--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,7 +6,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(to bottom, #c9e8c9, #b7e7bb);
+  /* background: linear-gradient(to bottom, #c9e8c9, #b7e7bb); */
+  background: linear-gradient(to bottom, #8b5cf6, #b7e7bb);
   height: 100%;
 }
 
